# mastering-algorithms

./: .gitignore  CMakeLists.txt  ds.c  prelim.c  prelim_test.c
bench/: bm.c
datastructures/: CMakeLists.txt
datastructures/include/: frames.h  list.h  queue.h  stack.h
datastructures/src/: frames.c  list.c  queue.c  stack.c
include/: bm.h  events.h  hanoi.h  pointers.h  test.h
preliminaries/: CMakeLists.txt  pointers.c
preliminaries/include/: pointers.h  recursion.h
preliminaries/pointer/: fundamentals.c  fundamentals.h
preliminaries/src/: pointers.c  recursion.c
src/: ds.c  hanoi.c
test/: events.c  hanoi.c  list.c  pointer_test.c  prelim.c  prelim_test.c  recursion.c  recursion_test.c
